fix rating circle stretching

--- a/react-app/src/components/BusinessBrowsingPage/BusinessCard/BusinessCard.css
+++ b/react-app/src/components/BusinessBrowsingPage/BusinessCard/BusinessCard.css
@@ -59,6 +59,7 @@
   font-weight: bold;
   padding: 5px;
   width: fit-content;
+  aspect-ratio: 1;
   border-radius: 50%;
   background-color: #DDD;
 }
